feat: add initial structure and styles for TODO app with dynamic state management -> to make use of Railway NGINX static site template to deploy

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "private": true,
     "scripts": {
-        "start": "bun run src/index.html"
+        "dev:local": "bun run src/index.html",
+        "build": "rsync -av --exclude='*.ts' src/ site/"
     },
     "devDependencies": {
         "@types/bun": "latest"
