feat: update build and start scripts in configuration files for improved deployment

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "private": true,
     "scripts": {
         "dev:local": "bun run src/index.html",
-        "build": "rsync -av --exclude='*.ts' src/ dist/",
-        "start": "npx serve dist -p ${PORT:-3000}",
-        "dev": "npx serve src -p 3000"
+        "build:site": "rsync -av --exclude='*.ts' src/ dist/",
+        "build": "cp -r src/* dist/ || mkdir -p dist && cp -r src/* dist/",
+        "start": "serve dist -p ${PORT:-3000}",
+        "dev": "serve src -p 3000"
     },
     "dependencies": {
         "serve": "^14.2.1"
@@ -20,6 +21,7 @@
         "typescript": "^5"
     },
     "engines": {
-        "node": ">=18"
+        "node": ">=18.0.0",
+        "npm": ">=8.0.0"
     }
 }
