--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,11 @@
+[phases.setup]
+nixPkgs = ["nodejs_18", "npm"]
+
 [phases.build]
 cmds = [
-    "npm ci",
-    "npm run build"
+    "mkdir -p dist",
+    "cp -r src/* dist/",
+    "npm install"
 ]
 
 [phases.start]
@@ -9,3 +13,4 @@ cmd = "npm start"
 
 [variables]
 NODE_ENV = "production"
+PORT = "3000"
